# src/controllers/index.js
@@ -1,5 +1,7 @@
 export {CustomerController} from './customer';
 export {DepartmentController} from './department';
 export {CategoryController} from './categories';
-export { ProductController } from './product';
-export { ReviewController } from './review';
+export {ProductController} from './product';
+export {ReviewController} from './review';
+export {AttributeController} from './attribute';
+export {AttributeValueController} from './values';
